<resources>
    <string name="app_name">Unothing</string>
    <string name="img_desc">Image</string>>
    <string name="hide_text">\???</string>
    <string name="ques_on">Hide Question</string>
    <string name="ques_off">Show Question</string>
    <string name="answ_off">Show Answer</string>
    <string name="answ_on">Hide Answer</string>
    <string name="next_btn">Next</string>
    <string name="menu_add">Add Card</string>
    <string name="add_card_title">Edit Card</string>
    <string name="ques_label">New Question:</string>
    <string name="answ_label">New Answer:</string>
    <string name="image_label">New Image:</string>
    <string name="done_button">Done</string>
    <string name="ques_hint"/>
    <string name="answ_hint"/>
    <string name="image_hint">\"img0\" - \"img7\"</string>
    <string name="title_activity_test">TestActivity</string>
    <string name="swipe_text">Delete</string>
</resources>
