<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
             tools:context="ca.wlu.tianran.unothing.cards.CardDetailFragment"
             android:id="@+id/card_detail_fragment">

    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <ImageView
                android:layout_width="0dp"
                android:layout_height="200dp" app:srcCompat="@drawable/img0"
                android:id="@+id/imageView" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent"
                android:contentDescription="@string/img_desc"
                android:scaleType="fitCenter" android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                tools:layout_constraintRight_creator="1" tools:layout_constraintLeft_creator="1"
                app:layout_constraintHorizontal_bias="0.0" android:layout_marginStart="16dp"/>
        <GridLayout
                android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:columnCount="2"
                android:layout_width="wrap_content" android:elevation="0dp"
                android:layout_marginStart="16dp" android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="16dp"
                android:layout_marginEnd="16dp">

            <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/quesTgl" android:textOff="@string/ques_off"
                    style="@style/AlertDialog.AppCompat.Light" android:textOn="@string/ques_on" android:textSize="16sp"
                    tools:layout_editor_absoluteY="480dp" tools:layout_editor_absoluteX="673dp"/>
            <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/quesText" android:text="@string/hide_text"
                    android:textSize="16sp" android:fontFamily="casual"
                    tools:layout_editor_absoluteX="876dp" tools:layout_editor_absoluteY="480dp"
                    android:layout_marginStart="16dp" android:layout_gravity="center_horizontal"
            />
            <ToggleButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/answTgl" android:textOff="@string/answ_off"
                    android:textOn="@string/answ_on" android:textSize="16sp" style="@style/AlertDialog.AppCompat"
                    tools:layout_editor_absoluteX="673dp" tools:layout_editor_absoluteY="684dp"
                    android:layout_marginTop="16dp"/>
            <TextView
                    android:layout_height="wrap_content"
                    android:id="@+id/answText" android:text="@string/hide_text"
                    android:textSize="16sp" android:fontFamily="casual"
                    tools:layout_editor_absoluteY="684dp" tools:layout_editor_absoluteX="876dp"
                    android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                    android:layout_gravity="center_horizontal"/>
            <Button
                    android:text="@string/next_btn"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content" android:id="@+id/nextBtn"
                    android:layout_columnSpan="2" style="@style/Widget.AppCompat.Button.Colored" android:textSize="20sp"
                    android:layout_gravity="bottom|center_horizontal"/>
        </GridLayout>
    </android.support.constraint.ConstraintLayout>
</FrameLayout>
