<?xml version="1.0" encoding="utf-8"?>
<ca.wlu.tianran.unothing.util.SwipeItemLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                              android:layout_width="match_parent"
                                              android:layout_height="wrap_content"
                                              xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
            android:id="@+id/itemCard"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ffffff">

        <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp" app:srcCompat="@drawable/img0" android:id="@+id/itemImage"
                android:contentDescription="@string/img_desc"
                android:layout_gravity="start" android:scaleType="fitXY"
                android:paddingBottom="10dp" android:paddingEnd="10dp" android:paddingStart="10dp"
                android:paddingTop="10dp"/>


        <TextView
                android:text="@string/hide_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/itemQues"
                android:fontFamily="casual" android:textSize="16sp"
                android:paddingStart="100dp" android:paddingTop="10dp"/>
    </android.support.v7.widget.CardView>

    <FrameLayout android:layout_width="wrap_content" android:layout_height="wrap_content">
        <Button
                android:layout_width="90dp"
                android:layout_height="100dp"
                android:background="#f33213"
                android:id="@+id/swipeBtn"
                android:text="@string/swipe_text"
                android:textSize="16sp"
                android:textColor="#ffffff"
                android:layout_gravity="end"/>
    </FrameLayout>

</ca.wlu.tianran.unothing.util.SwipeItemLayout>
